<resources>
    <string name="app_name">My app portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mynanodegreeapps">My Nanodegree Apps!</string>
    <string name="spotifyapp">SPOTIFY STREAMER</string>
    <string name="scoreapp">SCORE APP</string>
    <string name="libraryapp">LIBRARY APP</string>
    <string name="buildbigger">BUILD IT BIGGER</string>
    <string name="reader">XYZ READER</string>
    <string name="capstone">capstone: my own app</string>
</resources>
